WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313861
[AppKit Gestures] Unable to invoke context menus on highlighted text via click
https://bugs.webkit.org/show_bug.cgi?id=313861
Summary
[AppKit Gestures] Unable to invoke context menus on highlighted text via click
Richard Robinson
Reported
2026-05-01 16:47:07 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2026-05-01 16:47:08 PDT
<
rdar://problem/175290015
>
Richard Robinson
Comment 2
2026-05-01 16:47:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64078
EWS
Comment 3
2026-05-01 21:00:18 PDT
Committed
312469@main
(620a1ea677f5): <
https://commits.webkit.org/312469@main
> Reviewed commits have been landed. Closing PR #64078 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug